Fix long path names causing table overflow

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -2,6 +2,7 @@
 
 .path_text {
   color: cadetblue;
+  overflow-wrap: anywhere;
 }
 
 .copy_icon {
